//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  nickname String [unique]
  username String [not null]
  avatar String
  profileId String [not null]
  provider String [not null]
  blockedUsers User [not null]
  blockedBy User [not null]
  status StatusUser [not null, default: 'ONLINE']
  totpSecret TotpSecret
  role Role [not null, default: 'USER']
  matchEntries MatchEntry [not null]
  stats Statistique [not null]
  friends User [not null]
  friendsOf User [not null]
  achievement UserAchivement [not null]
  invitationEmit MatchInvitation [not null]
  invitationReceive MatchInvitation [not null]
  Message Message [not null]
  Member Member [not null]
  ChatRoom ChatRoom [not null]

  indexes {
    (profileId, provider) [unique]
  }
}

Table Statistique {
  id Int [pk, increment]
  nb_game Int [not null, default: 0]
  nb_win Int [not null, default: 0]
  User User [not null]
  userId Int [unique, not null]
}

Table TotpSecret {
  id Int [pk, increment]
  secret String [not null]
  verified Boolean [not null, default: false]
  userId Int [unique]
  user User
}

Table Achievements {
  id Int [pk, increment]
  Name String [unique, not null]
  Title String [unique, not null]
  Description String [not null]
  icon_path String
  user UserAchivement [not null]
}

Table UserAchivement {
  user User [not null]
  userId Int [not null]
  achievement Achievements [not null]
  achievementId Int [not null]

  indexes {
    (userId, achievementId) [pk]
  }
}

Table MatchEntry {
  id Int [pk, increment]
  score Int [not null]
  userId Int [not null]
  user User [not null]
  matchId Int [not null]
  match Match [not null]
}

Table Match {
  id Int [pk, increment]
  entries MatchEntry [not null]
  state MatchState [not null]
  startDate DateTime
  endDate DateTime
}

Table MatchInvitation {
  id Int [pk, increment]
  createdBy User [not null]
  createdById Int [unique, not null]
  sendToId Int [not null]
  sendTo User [not null]
  obstacle Boolean [not null]
  winScore Int [not null, default: 5]
  status InvitationState [not null, default: 'Pending']
}

Table Session {
  id String [pk]
  sid String [unique, not null]
  data String [not null]
  expiresAt DateTime [not null]
}

Table Message {
  id Int [pk, increment]
  author User [not null]
  authorId Int [not null]
  data String [not null]
  timestamp DateTime [not null]
  ChatRoom ChatRoom [not null]
  chatRoomName String [not null]
}

Table Member {
  memberId Int [not null]
  member User [not null]
  nickName String [not null]
  isOnline Boolean [not null]
  avatar String [not null]
  modes String [not null]
  ChatRoom ChatRoom [not null]
  chatRoomName String [not null]

  indexes {
    (memberId, chatRoomName) [pk]
  }
}

Table ChatRoom {
  name String [pk]
  owner Int [not null]
  modes String [not null]
  password String [not null]
  userLimit Int [not null]
  members Member [not null]
  messages Message [not null]
  bannedUsers User [not null]
}

Enum StatusUser {
  ONLINE
  OFFLINE
  PREPARING
  PLAYING
}

Enum Role {
  USER
  ADMIN
}

Enum InvitationState {
  Pending
  Started
  Finished
}

Enum MatchState {
  Scheduled
  Started
  Finished
}

Ref: Statistique.userId > User.id [delete: Cascade]

Ref: TotpSecret.userId - User.id

Ref: UserAchivement.userId > User.id

Ref: UserAchivement.achievementId > Achievements.id

Ref: MatchEntry.userId > User.id [delete: Cascade]

Ref: MatchEntry.matchId > Match.id [delete: Cascade]

Ref: MatchInvitation.createdById > User.id

Ref: MatchInvitation.sendToId > User.id

Ref: Message.authorId > User.id [delete: Cascade]

Ref: Message.chatRoomName > ChatRoom.name [delete: Cascade]

Ref: Member.memberId > User.id [delete: Cascade]

Ref: Member.chatRoomName > ChatRoom.name [delete: Cascade]